package observer;

public interface GameObserver {
    void updateView();
}
